--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+#*.log - for CloudGenix/network-as-code, we actually want .log files.
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
