--- a/configurations/Datacenter 1.yml
+++ b/configurations/Datacenter 1.yml
@@ -23,7 +23,7 @@ sites v4.4:
         cluster_member_id:
         connected: true
         deployment_op:
-        description:
+        description: "Element 1"
         element_security_zones v2.0: []
         interfaces v4.7:
           '1':
@@ -565,7 +565,7 @@ sites v4.4:
         cluster_member_id:
         connected: true
         deployment_op:
-        description:
+        description: "Element 2"
         element_security_zones v2.0: []
         interfaces v4.7:
           '1':
