--- a/configurations/Branch 1.yml
+++ b/configurations/Branch 1.yml
@@ -11,7 +11,7 @@ sites v4.4:
       street: 701 N Milwaukee Ave
       street2:
     admin_state: active
-    description: "Branch Site #1"
+    description: "Mike is testing Branch Site 1"
     element_cluster_role: SPOKE
     elements v2.3:
       BR1-2K-1:
