--- a/configurations/Branch 2.yml
+++ b/configurations/Branch 2.yml
@@ -22,7 +22,7 @@ sites v4.4:
         cluster_member_id:
         connected: true
         deployment_op:
-        description: "Element 1"
+        description: Element 1"
         element_security_zones v2.0: []
         interfaces v4.7:
           controller 1:
