Fix yaml format and HA

--- a/configurations/Branch 2.yml
+++ b/configurations/Branch 2.yml
@@ -11,7 +11,7 @@ sites v4.4:
       street: 103 W 42nd St
       street2:
     admin_state: active
-    description: "Carls House"
+    description: "Carl's House"
     element_cluster_role: SPOKE
     elements v2.3:
     location:
