Update for cloudgenix_config 1.4.x

--- a/configurations/Branch 1.yml
+++ b/configurations/Branch 1.yml
@@ -1,7 +1,9 @@
 ---
 type: cloudgenix template
 version: 1.0
-sites v4.4:
+# Created at 2021-05-13T21:13:38.888223Z
+# by travis-worker@cloudgenix.com
+sites v4.5:
   Branch 1:
     address:
       city: Milwaukee
@@ -11,41 +13,52 @@ sites v4.4:
       street: 1 Brewers Way
       street2:
     admin_state: active
-    description: "Branch Site #1"
+    description: 'Branch Site #1'
     element_cluster_role: SPOKE
-    elements v2.3:
+    elements v2.4:
       BR1-2K-1:
         admin_action:
+        admin_renew_state:
         allowed_roles:
         - HUB
         - SPOKE
+        application_probe v2.0:
+          description:
+          enable_probe: true
+          name: default-probe-configuration-15822216284210094
+          source_interface_id:
+          tags:
         cluster_insertion_mode:
         cluster_member_id:
         connected: true
         deployment_op:
-        description: "Element 1"
+        description: Element 1
         element_security_zones v2.0: []
-        interfaces v4.7:
+        interfaces v4.10:
           '1':
             admin_up: true
             attached_lan_networks:
             bound_interfaces:
             bypass_pair:
-            description: ''
+            description: test description - debug run 1 downgrade
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
                 name_servers:
+                - 10.1.100.1
+                - 8.8.8.8
                 - 8.8.4.4
-                - 10.1.100.10
               routes:
               static_config:
-                address: 10.1.100.1/24
+                address: 10.1.100.10/24
               type: static
             mac_address:
             mtu: 1500
@@ -57,8 +70,10 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: global
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -71,9 +86,12 @@ sites v4.4:
             description: ''
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -90,8 +108,10 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -104,9 +124,12 @@ sites v4.4:
             description: ''
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -123,9 +146,11 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
             - Circuit to Verizon
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -142,9 +167,12 @@ sites v4.4:
             description:
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -161,9 +189,11 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
             - Circuit to Comcast
+            static_arp_configs:
             sub_interface:
             tags:
             type: bypasspair
@@ -176,9 +206,12 @@ sites v4.4:
             description: ''
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -195,8 +228,10 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -236,7 +271,7 @@ sites v4.4:
         role: SPOKE
         routing:
           bgp:
-            global_config v2.1:
+            global_config v2.2:
               admin_distance: 20
               adv_interval: 1
               graceful_restart: false
@@ -246,15 +281,16 @@ sites v4.4:
               maximum_paths: 1
               md5_secret:
               multi_hop_limit: 1
+              peer_auth_type: none
               peer_retry_time: 120
               prefix_adv_type:
               prefix_adv_type_to_lan: default
               prefixes_to_adv_to_wan:
               router_id:
               stalepath_time: 120
-          static v2.0: []
+          static v2.1: {}
         serial_number: 20-001542-5046
-        software_version: 5.4.3-b9
+        software_version: 5.5.1-b7
         spoke_ha_config:
           cluster_id: Branch1 HA Group
           enable: true
@@ -268,6 +304,7 @@ sites v4.4:
               reduce_priority: 15
             - interface_id: '1'
               reduce_priority: 20
+            waninterfaces:
         state: bound
         tags:
         tenant_id: '1236'
@@ -281,16 +318,23 @@ sites v4.4:
         vpn_to_vpn_forwarding: false
       BR1-2K-2:
         admin_action:
+        admin_renew_state:
         allowed_roles:
         - HUB
         - SPOKE
+        application_probe v2.0:
+          description:
+          enable_probe: true
+          name: default-probe-configuration-15810524098220084
+          source_interface_id:
+          tags:
         cluster_insertion_mode:
         cluster_member_id:
         connected: true
         deployment_op:
-        description: "Element 2"
+        description: Element 2
         element_security_zones v2.0: []
-        interfaces v4.7:
+        interfaces v4.10:
           '1':
             admin_up: true
             attached_lan_networks:
@@ -299,9 +343,12 @@ sites v4.4:
             description: ''
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -322,8 +369,10 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: global
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -336,9 +385,12 @@ sites v4.4:
             description: ''
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -355,8 +407,10 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -369,9 +423,12 @@ sites v4.4:
             description: ''
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -388,9 +445,11 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
             - Circuit to Comcast
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -407,9 +466,12 @@ sites v4.4:
             description:
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -426,9 +488,11 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
             - Circuit to Verizon
+            static_arp_configs:
             sub_interface:
             tags:
             type: bypasspair
@@ -441,9 +505,12 @@ sites v4.4:
             description: ''
             devicemgmt_policysetstack_id:
             dhcp_relay:
+            directed_broadcast: false
             ethernet_port:
               full_duplex: false
               speed: 0
+            ipfixcollectorcontext_id:
+            ipfixfiltercontext_id:
             ipv4_config:
               dhcp_config:
               dns_v4_config:
@@ -460,8 +527,10 @@ sites v4.4:
             parent:
             pppoe_config:
             scope: local
+            secondary_ip_configs:
             service_link_config:
             site_wan_interface_ids:
+            static_arp_configs:
             sub_interface:
             tags:
             type: port
@@ -501,7 +570,7 @@ sites v4.4:
         role: SPOKE
         routing:
           bgp:
-            global_config v2.1:
+            global_config v2.2:
               admin_distance: 20
               adv_interval: 1
               graceful_restart: false
@@ -511,15 +580,16 @@ sites v4.4:
               maximum_paths: 1
               md5_secret:
               multi_hop_limit: 1
+              peer_auth_type: none
               peer_retry_time: 120
               prefix_adv_type:
               prefix_adv_type_to_lan: default
               prefixes_to_adv_to_wan:
               router_id:
               stalepath_time: 120
-          static v2.0: []
+          static v2.1: {}
         serial_number: 20-001638-7379
-        software_version: 5.4.3-b9
+        software_version: 5.5.1-b7
         spoke_ha_config:
           cluster_id: Branch1 HA Group
           enable: true
@@ -533,6 +603,7 @@ sites v4.4:
               reduce_priority: 10
             - interface_id: '1'
               reduce_priority: 20
+            waninterfaces:
         state: bound
         tags:
         tenant_id: '1236'
@@ -544,10 +615,11 @@ sites v4.4:
           ssh_enabled: true
           ssh_outbound_enabled: false
         vpn_to_vpn_forwarding: false
+    extended_tags:
     location:
       description:
-      latitude: 41.8945098
-      longitude: -87.6545033
+      latitude: 41.89451
+      longitude: -87.6545
     nat_policysetstack_id: Default NAT PolicySet Stack
     network_policysetstack_id: Default Path Policyset Stack (Simple)
     policy_set_id:
@@ -561,7 +633,7 @@ sites v4.4:
         preempt: true
         tags:
     tags:
-    waninterfaces v2.4:
+    waninterfaces v2.6:
       Circuit to Comcast:
         bfd_mode: aggressive
         bw_config_mode: manual
@@ -576,6 +648,10 @@ sites v4.4:
         network_id: Comcast
         network_type: publicwan
         tags:
+        type: publicwan
+        use_for_application_reachability_probes:
+        use_for_controller_connections:
+        vpnlink_configuration:
       Circuit to Verizon:
         bfd_mode: aggressive
         bw_config_mode: manual
@@ -590,3 +666,7 @@ sites v4.4:
         network_id: Verizon
         network_type: publicwan
         tags:
+        type: publicwan
+        use_for_application_reachability_probes:
+        use_for_controller_connections:
+        vpnlink_configuration:
